--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "deploy-production": "gcloud app deploy ./app.production.gcp.yaml --project smart-theater-production-sign --no-promote --version staging"
   },
   "dependencies": {
-    "@cinerino/sdk": "^2.1.0",
-    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@cinerino/sdk": "^3.2.0",
     "@reduxjs/toolkit": "^1.5.1",
     "basic-auth": "^2.0.1",
     "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.5.0",
     "compression": "^1.7.4",
     "connect-redis": "^5.2.0",
     "cookie-parser": "^1.4.5",
@@ -29,9 +29,9 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "next": "latest",
-    "react": "^16.13.1",
+    "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.2",
     "react-hook-form": "^7.5.3",
     "react-redux": "^7.2.4",
     "redis": "^3.1.2",
@@ -62,8 +62,8 @@
     "eslint-plugin-react": "^7.23.2",
     "nodemon": "^2.0.4",
     "prettier": "^2.2.1",
-    "ts-node": "^8.10.2",
-    "typescript": "^4.2.4"
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.2"
   },
   "license": "MIT"
 }
